comment-list.less: Fix `overflow` for title subjects
refs #401

--- a/public/css/list/comment-list.less
+++ b/public/css/list/comment-list.less
@@ -13,7 +13,6 @@
 
   .title a {
     &.subject {
-      overflow: visible;
       margin-right: 0;
     }
 
